--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
     // ==========================================
     // ★ 1. 雲端設定區 (請在此填入) ★
     // ==========================================
-    const BIN_ID = "6968707cae596e708fdd6cfa"; 
-    const API_KEY = "6968717143b1c97be9319666"; 
-    const BIN_URL = `https://api.jsonbin.io/v3/b/${6968707cae596e708fdd6cfa}`;
+    const BIN_ID = "6968725ad0ea881f406cee7d"; 
+    const API_KEY = "$2a$10$RuntX021hK..yrKAIqsWQO9mFGY3rknXw624PomhN8LSvwuWeZVSm"; 
+    const BIN_URL = `https://api.jsonbin.io/v3/b/${6968725ad0ea881f406cee7d}`;
 
     // 數據庫結構
     let db = { wishlist: [], todos: [], finished: [] };
@@ -396,3 +396,4 @@
 </script>
 </body>
 </html>
+
